# donto

./: .gitignore  ANTHROPOLOGY_README.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  LICENSE-MIT  PRD-faces.md  PRD.md  README.md  SECURITY.md  alexandria-2-0-report.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.base.json  turbo.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: all.yml  analytics-ci.yml  ci.yml  docs.yml  ext.yml  lean.yml
apps/docs/: astro.config.mjs  package.json
apps/donto-api/: Dockerfile  Dockerfile.worker  activities.py  agent_instructions.py  analysis_endpoints.py  analytical_ir.py  helpers.py  main.py  report_compiler.py  requirements.txt  skills.py  viz_endpoints.py  worker.py  workflows.py
apps/donto-api/extraction/: __init__.py  apertures.py  decomposers.py  dispatch.py  domain.py  exhaustive.py  policy_gate.py  prompts.py  quarantine.py  validation.py
apps/donto-api/tests/: test_exhaustive.py  test_extraction_dispatch.py
apps/donto-cli/: Cargo.toml
apps/donto-cli/src/: analyze.rs  extract.rs  main.rs
apps/donto-tui/: README.md  go.mod  go.sum  main.go
apps/donto-tui/internal/app/: app.go
apps/donto-tui/internal/components/: gauge.go  sparkline.go  statusbar.go
apps/donto-tui/internal/db/: pool.go
apps/donto-tui/internal/model/: types.go
apps/donto-tui/sql/: notify_trigger.sql
apps/dontosrv/: Cargo.toml
apps/dontosrv/src/: agents.rs  alignment.rs  arguments.rs  auth.rs  documents.rs  evidence.rs  history.rs  ingest.rs  lean.rs  lib.rs  main.rs  obligations.rs  policy.rs  react.rs  rules.rs  shapes.rs
apps/dontosrv/tests/: invariants_certificates.rs  invariants_rules.rs  invariants_shapes.rs  lean_engine.rs  sidecar.rs  trust_kernel_middleware.rs
apps/faces/: README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
crates/donto-cli/: Cargo.toml
crates/donto-cli/src/: main.rs  nquads.rs
crates/donto-client/: Cargo.toml
crates/donto-client/src/: client.rs  error.rs  lib.rs  migrations.rs  model.rs  scope.rs
crates/donto-client/tests/: assert_match.rs  bitemporal.rs  examples_everything.rs  invariants_agents.rs  invariants_annotations.rs  invariants_bitemporal.rs  invariants_candidates.rs  invariants_confidence.rs  invariants_content_regions.rs  invariants_contexts.rs  invariants_correction.rs  invariants_default_context.rs  invariants_entity_aliases.rs  invariants_evidence_links.rs  invariants_fts.rs  invariants_maturity.rs  invariants_maturity_filter.rs  invariants_mentions.rs  invariants_paraconsistency.rs  invariants_polarity_coexistence.rs  invariants_predicate.rs  invariants_proof_obligations.rs  invariants_reactions.rs  invariants_retrofit.rs  invariants_same_meaning.rs  invariants_scope_deep.rs  invariants_sections.rs  invariants_snapshot_hypothesis.rs  invariants_units.rs  invariants_valid_time_buckets.rs  invariants_vectors.rs  paraconsistent.rs  property_truth_model.rs  scope.rs
crates/donto-client/tests/common/: mod.rs
crates/donto-ingest/: Cargo.toml
crates/donto-ingest/src/: csv.rs  jsonl.rs  jsonld.rs  lib.rs  nquads.rs  pipeline.rs  property_graph.rs  quarantine.rs  rdfxml.rs  turtle.rs
crates/donto-ingest/tests/: quarantine_integration.rs
crates/donto-migrate/: Cargo.toml
crates/donto-migrate/src/: genealogy.rs  main.rs  relink.rs
crates/donto-migrate/tests/: genealogy_e2e.rs
crates/donto-query/: Cargo.toml
crates/donto-query/src/: algebra.rs  dontoql.rs  evaluator.rs  lib.rs  sparql.rs
crates/donto-query/tests/: end_to_end.rs
crates/dontosrv/: Cargo.toml
crates/dontosrv/src/: agents.rs  browse.rs  certificates.rs  dir.rs  evidence.rs  history.rs  lib.rs  main.rs  rules.rs  shapes.rs
crates/dontosrv/tests/: invariants_certificates.rs  invariants_rules.rs  invariants_shapes.rs  lean_engine.rs  sidecar.rs
crates/pg_donto/: Cargo.toml  Dockerfile  README.md  pg_donto.control
crates/pg_donto/src/: lib.rs
docs/: ARCHITECTURE-REPORT.md  ATLAS-ZERO-FRONTIER.md  BENCH-RESULTS.md  DEV.md  DONTO-CLI.md  DONTO-PRD.md  DONTO-RESEARCH-BRIEF.md  DONTO-STATUS-REPORT-2026-04-25.md  DONTO-V1000-PRD.md  DONTOQL.md  EXTRACTION-MAXIMALISM.md  GENEALOGY-GUIDE.md  LANGUAGE-EXTRACTION-PLAN.md  LEAN-FORMALIZATION-PLAN.md  LEAN-OVERLAY.md  M9-FEDERATION-MEMO.md  MIGRATIONS.md  OPERATOR-GUIDE.md  PAPER-EXTRACTION-REPORT.md  PHASE-0.md  PRD-alexandria-extensions.md  PRODUCTION.md  README.md  REFACTOR-PLAN.md  REVIEW-FINDINGS.md  ROADMAP-NEXT.md  SCHEMA-GAPS.md  USER-GUIDE.md  V1000-REVIEW-FINDINGS.md
docs/examples/paperclip-qwen-donto/: README.md  lean-copilot-clear-qwen-response.json  lean-copilot-clear-qwen-response.md  lean-copilot-clear-statements.jsonl
extension/: Makefile  pg_donto.control
infra/systemd/: README.md  donto-analyze.service  donto-analyze.timer
lean/: Donto.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
lean/Donto/: Certificate.lean  Core.lean  Correction.lean  Engine.lean  Evidence.lean  IR.lean  Obligations.lean  Predicates.lean  Rules.lean  Scope.lean  Shapes.lean  Temporal.lean  Theorems.lean
scripts/: demo-lean.sh  demo-resume.sh  demo-theorem.sh  deploy-genes.sh  pg-down.sh  pg-up.sh  pgrx-build.sh  recover-cloud-run.sh  setup-laptop.sh
sql/fixtures/: exoneration_brooks.sql  lubm-tiny.nq  resume_thomas.sql
sql/migrations/: 0001_core.sql  0002_flags.sql  0003_functions.sql  0005_presets.sql  0006_predicate.sql  0007_snapshot.sql  0009_rule.sql  0012_match_scope_fix.sql  0014_retrofit.sql  0016_valid_time_buckets.sql  0017_reactions.sql  0019_fts.sql  0020_bitemporal_canonicals.sql  0021_same_meaning.sql  0024_document_revisions.sql  0025_spans.sql  0027_annotation_edges.sql  0029_evidence_links.sql  0030_agents.sql  0031_arguments.sql  0033_vectors.sql  0034_claim_card.sql  0035_document_sections.sql  0037_extraction_chunks.sql  0039_units.sql  0041_content_regions.sql  0042_entity_aliases.sql  0046_references.sql  0047_claim_lifecycle.sql
(+36 files in other folders)
