[workspace]
resolver = "2"
members = [
    "crates/donto-client",
    "crates/donto-cli",
    "crates/donto-query",
    "crates/dontosrv",
    "crates/donto-ingest",
    "crates/donto-migrate",
]
# `crates/pg_donto` is the pgrx-based Postgres extension. It is intentionally
# *not* a workspace member because pgrx requires Postgres dev headers and a
# pgrx-cli step that breaks ordinary `cargo build`. Build it explicitly:
#   cd crates/pg_donto && cargo pgrx package
# CI runs the extension build in its own job (.github/workflows/ext.yml).
exclude = ["crates/pg_donto"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
authors = ["donto contributors"]
repository = "https://github.com/thomasdavis/donto"
description = "donto: bitemporal paraconsistent quad store on Postgres + Lean sidecar"

[workspace.dependencies]
tokio          = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rio_api        = "0.8"
rio_turtle     = "0.8"
clap           = { version = "4", features = ["derive", "env"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
futures-util   = "0.3"
sha2           = "0.10"
hex            = "0.4"
rusqlite       = { version = "0.31", features = ["bundled"] }
axum           = "0.7"
csv            = "1"
rio_xml        = "0.8"
nom            = "7"
proptest       = "1"

[profile.release]
lto = "thin"
codegen-units = 1
