[workspace]
resolver = "2"
members = [
    "packages/donto-client",
    "packages/donto-query",
    "packages/donto-ingest",
    "packages/donto-ling-cldf",
    "packages/donto-ling-eaf",
    "packages/donto-ling-lift",
    "packages/donto-ling-ud",
    "packages/donto-ling-unimorph",
    "packages/donto-migrate",
    "packages/donto-release",
    "packages/donto-analytics",
    "packages/donto-synthetic",
    "packages/donto-alert-sink",
    "apps/donto-cli",
    "apps/dontosrv",
]
# `packages/pg_donto` is the pgrx-based Postgres extension. It is intentionally
# *not* a workspace member because pgrx requires Postgres dev headers and a
# pgrx-cli step that breaks ordinary `cargo build`. Build it explicitly:
#   cd packages/pg_donto && cargo pgrx package
# CI runs the extension build in its own job (.github/workflows/ext.yml).
exclude = ["packages/pg_donto"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
authors = ["donto contributors"]
repository = "https://github.com/thomasdavis/donto"
description = "donto: bitemporal paraconsistent quad store on Postgres + Lean sidecar"

# Workspace-wide clippy lint config. CI runs `cargo clippy --workspace
# --all-targets -- -D warnings`. The lints below are pre-existing
# patterns whose remediation would mean rewriting working code without
# behavioural improvement; allowing them is intentional.
[workspace.lints.rust]
# Some serde-deserialised types (e.g. usage / token counts) are kept as
# fields for completeness even when no Rust code reads them.
dead_code = "allow"

[workspace.lints.clippy]
# Client methods mirror SQL function signatures one-to-one; 8+ params is
# normal. Builder structs would just shuffle complexity around.
too_many_arguments = "allow"
# `.err().expect("...")` and `.expect_err("...")` are equivalent.
err_expect = "allow"
# Manual `impl Default` is sometimes more explicit than `#[derive(Default)]`.
derivable_impls = "allow"
# `Iterator::last` on DoubleEndedIterator is a micro-optimisation hint;
# the affected sites iterate small CLI argument lists.
double_ended_iterator_last = "allow"

[workspace.dependencies]
tokio          = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rio_api        = "0.8"
rio_turtle     = "0.8"
quick-xml      = "0.36"
ed25519-dalek  = { version = "2", features = ["rand_core"] }
rand           = "0.8"
bs58           = "0.5"
clap           = { version = "4", features = ["derive", "env"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
futures-util   = "0.3"
sha2           = "0.10"
hex            = "0.4"
rusqlite       = { version = "0.31", features = ["bundled"] }
axum           = "0.7"
csv            = "1"
rio_xml        = "0.8"
nom            = "7"
proptest       = "1"
tempfile       = "3"
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
