[package]
name        = "donto-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "donto command-line interface"
repository  = { workspace = true }

[[bin]]
name = "donto"
path = "src/main.rs"

[dependencies]
donto-client      = { path = "../../packages/donto-client" }
donto-analytics   = { path = "../../packages/donto-analytics" }
donto-alert-sink  = { path = "../../packages/donto-alert-sink" }
donto-query       = { path = "../../packages/donto-query" }
donto-ingest      = { path = "../../packages/donto-ingest" }
donto-release     = { path = "../../packages/donto-release" }
donto-ling-cldf      = { path = "../../packages/donto-ling-cldf" }
donto-ling-ud        = { path = "../../packages/donto-ling-ud" }
donto-ling-unimorph  = { path = "../../packages/donto-ling-unimorph" }
donto-ling-lift      = { path = "../../packages/donto-ling-lift" }
donto-ling-eaf       = { path = "../../packages/donto-ling-eaf" }
donto-blob           = { path = "../../packages/donto-blob" }
walkdir              = "2"
regex                = "1"
futures-util         = { workspace = true }
tokio             = { workspace = true }
clap              = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }
rio_api           = { workspace = true }
rio_turtle        = { workspace = true }
clap_mangen       = "0.2"
clap_complete     = "4"
reqwest           = { workspace = true }
hex               = { workspace = true }

[lints]
workspace = true
