[package]
name        = "donto-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "donto command-line interface"
repository  = { workspace = true }

[[bin]]
name = "donto"
path = "src/main.rs"

[dependencies]
donto-client      = { path = "../donto-client" }
donto-query       = { path = "../donto-query" }
donto-ingest      = { path = "../donto-ingest" }
tokio             = { workspace = true }
clap              = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }
rio_api           = { workspace = true }
rio_turtle        = { workspace = true }
