[package]
name        = "donto-client"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "Rust client for the donto Phase 0 SQL surface"
repository  = { workspace = true }

[dependencies]
tokio              = { workspace = true }
tokio-postgres     = { workspace = true }
deadpool-postgres  = { workspace = true }
postgres-types     = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
futures-util       = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
anyhow             = { workspace = true }
tracing-subscriber = { workspace = true }
