[package]
name        = "donto-ingest"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "Ingestion pipelines: N-Quads, Turtle, TriG, JSON-LD, RDF/XML, CSV, JSONL streaming"
repository  = { workspace = true }

[dependencies]
donto-client = { path = "../donto-client" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
rio_api      = { workspace = true }
rio_turtle   = { workspace = true }
rio_xml      = { workspace = true }
csv          = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile     = { workspace = true }
