[package]
name        = "dontosrv"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "donto sidecar: HTTP gateway, sidecar protocol, validators"
repository  = { workspace = true }

[[bin]]
name = "dontosrv"
path = "src/main.rs"

[dependencies]
donto-client = { path = "../donto-client" }
donto-query  = { path = "../donto-query" }
tokio        = { workspace = true, features = ["process", "io-util", "sync", "time"] }
axum         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
chrono       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
uuid         = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }

[dev-dependencies]
tower        = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http         = "1"
uuid         = { workspace = true }
