[package]
name        = "pg_donto"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"
license     = "Apache-2.0 OR MIT"
description = "donto: bitemporal paraconsistent quad store as a Postgres extension"
repository  = "https://github.com/thomasdavis/donto"
publish     = false

[lib]
crate-type  = ["cdylib", "rlib"]

# pgrx 0.12 emits SQL by linking a small embed binary that dumps the
# schema descriptors compiled into the cdylib. Without this target the
# `cargo pgrx schema` step (run by `package`) fails to find the binary.
[[bin]]
name = "pgrx_embed_pg_donto"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg13  = ["pgrx/pg13",  "pgrx-tests/pg13"]
pg14  = ["pgrx/pg14",  "pgrx-tests/pg14"]
pg15  = ["pgrx/pg15",  "pgrx-tests/pg15"]
pg16  = ["pgrx/pg16",  "pgrx-tests/pg16"]
pg17  = ["pgrx/pg17",  "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx        = "=0.12.7"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[dev-dependencies]
pgrx-tests  = "=0.12.7"
